force-app/main/default/objects/Parent__c/fields/Child_Number__c.field-meta.xml
<CustomField>
    <fullName>Child_Number__c</fullName>
    <label>Child Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>