force-app/main/default/objects/Parent__c/fields/ReportCardUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>ReportCardUpdateTime__c</fullName>
    <label>ReportCardUpdateTime</label>
    <type>DateTime</type>
</CustomField>