force-app/main/default/objects/Parent__c/fields/State_City__c.field-meta.xml
<CustomField>
    <fullName>State_City__c</fullName>
    <label>State/City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>